--- a/HaRepacker/GUI/Panels/SubPanels/ImageRenderViewer.xaml
+++ b/HaRepacker/GUI/Panels/SubPanels/ImageRenderViewer.xaml
@@ -81,7 +81,7 @@
                         <!-- Crosshair for vector origin-->
                         <!-- Margin="{Binding CanvasVectorOrigin, Converter={StaticResource vectorOriginConverter}}"
                         -->
-                        <Grid x:Name="gridCrossHair" 
+                        <Grid
                               Visibility="{Binding ElementName=checkbox_crosshair, Path=IsChecked, Converter={StaticResource checkboxToVisibilityConverter}}"
                               HorizontalAlignment="Left" VerticalAlignment="Top"
                               Margin="{Binding CanvasVectorOrigin, Converter={StaticResource vectorOriginConverter}}"  >
@@ -96,7 +96,7 @@
                         </Grid>
 
                         <!-- Grid for head crosshair-->
-                        <Grid x:Name="gridHeadCrossHair" 
+                        <Grid 
                               Visibility="{Binding ElementName=checkbox_crosshair, Path=IsChecked, Converter={StaticResource checkboxToVisibilityConverter}}"
                               HorizontalAlignment="Left" VerticalAlignment="Top"
                               Margin="{Binding CanvasVectorHead, Converter={StaticResource vectorOriginConverter}}"  >
@@ -107,6 +107,21 @@
                                    Visibility="{Binding CanvasVectorHead, Converter={StaticResource pointFToVisiblityConverter}}">
                                 <Grid Width="0.5" Height="10" Background="DarkOrange"/>
                                 <Grid Height="0.5" Width="10" Background="DarkOrange"/>
+                            </Grid>
+                        </Grid>
+
+                        <!-- Grid for head lt-->
+                        <Grid 
+                              Visibility="{Binding ElementName=checkbox_crosshair, Path=IsChecked, Converter={StaticResource checkboxToVisibilityConverter}}"
+                              HorizontalAlignment="Left" VerticalAlignment="Top"
+                              Margin="{Binding CanvasVectorLt, Converter={StaticResource vectorOriginConverter}}"  >
+
+                            <!-- Grid to compensate for the crosshair length-->
+                            <!-- Crosshair must always only be 1/2 of the image width and height-->
+                            <Grid  Margin="-5,0,0,-5"
+                                   Visibility="{Binding CanvasVectorLt, Converter={StaticResource pointFToVisiblityConverter}}">
+                                <Grid Width="0.5" Height="10" Background="DarkMagenta"/>
+                                <Grid Height="0.5" Width="10" Background="DarkMagenta"/>
                             </Grid>
                         </Grid>
                     </Grid>
@@ -155,6 +170,13 @@
                             Visibility="{Binding CanvasVectorHead, Converter={StaticResource pointFToVisiblityConverter}}">
                     <TextBlock Text="Head " Margin="0,0,0,0" FontSize="10" Foreground="DarkOrange" FontWeight="Bold"/>
                     <TextBlock Text="{Binding CanvasVectorHead, Converter={StaticResource pointFOriginToStringConverter}}" Margin="3,0,0,0" FontSize="10"  Foreground="DarkOrange"/>
+                </StackPanel>
+                
+                <!-- 'lt' -->
+                <StackPanel Orientation="Horizontal" 
+                            Visibility="{Binding CanvasVectorLt, Converter={StaticResource pointFToVisiblityConverter}}">
+                    <TextBlock Text="lt " Margin="0,0,0,0" FontSize="10" Foreground="DarkMagenta" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding CanvasVectorLt, Converter={StaticResource pointFOriginToStringConverter}}" Margin="3,0,0,0" FontSize="10"  Foreground="DarkMagenta"/>
                 </StackPanel>
             </StackPanel>
         </Grid>
